--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
 	}, 
 	"background": {
 		"persistent": false,
-		"scripts": ["src/js/background.js"]
+		"scripts": ["src/js/Helpers.js", "src/js/Task.js", 
+			"src/js/TaskRepository.js","src/js/background.js"]
 	},
 	"permissions": ["storage"]
 
