--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "0.1",
 	"browser_action": {
 		"default_title": "WorkPlay Pomodoro",
-		"default_popup": "views/popup_test.html"
+		"default_popup": "views/popup.html"
 	}, 
 	"background": {
 		"persistent": false,
