Added content script

--- a/manifest.json
+++ b/manifest.json
@@ -8,11 +8,25 @@
 	}, 
 	"background": {
 		"persistent": false,
-		"scripts": ["src/js/helpers.js", "spec/mocks.js",
-			"src/js/Task.js", "src/js/TaskRepository.js", 
-			"src/js/TaskService.js", "src/js/PomodoroTimer.js",
-			"src/js/background.js"]
+		"scripts": [
+			"src/js/helpers.js", 
+			"spec/mocks.js",
+			"src/js/Task.js", 
+			"src/js/TaskRepository.js", 
+			"src/js/TaskService.js", 
+			"src/js/PomodoroTimer.js",
+			"src/js/background.js"
+		]
 	},
-	"permissions": ["storage"]
+	"content_scripts": [
+		{
+			"matches": ["<all_urls>"],
+			"js": ["src/js/content.js"]
+		}
+	],
+	"permissions": [
+		"storage", 
+		"activeTab"
+	]
 
 }
