--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,11 @@
 	"manifest_version": 2,
 	"name": "WorkPlay Pomodoro",
 	"version": "0.1",
+	"icons": {
+		"16": "images/workPlay.png",
+		"48": "images/workPlay.png",
+		"128": "images/workPlay.png"
+	},
 	"browser_action": {
 		"default_title": "WorkPlay Pomodoro",
 		"default_popup": "views/popup.html"
